--- a/CtrBoard.ioc
+++ b/CtrBoard.ioc
@@ -5,6 +5,45 @@ CAD.provider=
 CORTEX_M7.CPU_DCache=Disabled
 CORTEX_M7.CPU_ICache=Disabled
 CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache
+Dma.Request0=SPI2_RX
+Dma.Request1=SPI2_TX
+Dma.RequestsNb=2
+Dma.SPI2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.0.EventEnable=DISABLE
+Dma.SPI2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_RX.0.Instance=DMA1_Stream0
+Dma.SPI2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.0.Mode=DMA_NORMAL
+Dma.SPI2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SPI2_RX.0.RequestNumber=1
+Dma.SPI2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_RX.0.SignalID=NONE
+Dma.SPI2_RX.0.SyncEnable=DISABLE
+Dma.SPI2_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_RX.0.SyncRequestNumber=1
+Dma.SPI2_RX.0.SyncSignalID=NONE
+Dma.SPI2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.1.EventEnable=DISABLE
+Dma.SPI2_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_TX.1.Instance=DMA1_Stream1
+Dma.SPI2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.1.Mode=DMA_NORMAL
+Dma.SPI2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_TX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI2_TX.1.RequestNumber=1
+Dma.SPI2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_TX.1.SignalID=NONE
+Dma.SPI2_TX.1.SyncEnable=DISABLE
+Dma.SPI2_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_TX.1.SyncRequestNumber=1
+Dma.SPI2_TX.1.SyncSignalID=NONE
 FDCAN1.AutoRetransmission=ENABLE
 FDCAN1.CalculateBaudRateNominal=1000000
 FDCAN1.CalculateTimeBitNominal=1000
@@ -56,9 +95,9 @@ FDCAN2.StdFiltersNbr=4
 FDCAN2.TxBuffersNbr=10
 FDCAN2.TxEventsNbr=10
 FDCAN2.TxFifoQueueElmtsNbr=10
-FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;Calculator,55,512,T_Calculator,Default,NULL,Dynamic,NULL,NULL;Motor_Control,55,512,T_Motor_Control,Default,NULL,Dynamic,NULL,NULL;USER,54,128,T_USER,Default,NULL,Dynamic,NULL,NULL;Sensor,55,512,T_Sensor,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,MEMORY_ALLOCATION
+FREERTOS.MEMORY_ALLOCATION=1
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;Calculator,48,512,T_Calculator,Default,NULL,Static,CalculatorBuffer,CalculatorControlBlock;Motor_Control,48,512,T_Motor_Control,Default,NULL,Static,Motor_ControlBuffer,Motor_ControlControlBlock;USER,48,128,T_USER,Default,NULL,Static,USERBuffer,USERControlBlock;Sensor,48,512,T_Sensor,Default,NULL,Static,SensorBuffer,SensorControlBlock
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -68,44 +107,56 @@ Mcu.CPN=STM32H723VGT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP10=TIM4
-Mcu.IP11=USART1
-Mcu.IP2=FDCAN1
-Mcu.IP3=FDCAN2
-Mcu.IP4=FREERTOS
-Mcu.IP5=MEMORYMAP
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
-Mcu.IP8=SYS
-Mcu.IP9=TIM3
-Mcu.IPNb=12
+Mcu.IP10=SYS
+Mcu.IP11=TIM3
+Mcu.IP12=TIM4
+Mcu.IP13=USART1
+Mcu.IP2=DMA
+Mcu.IP3=FDCAN1
+Mcu.IP4=FDCAN2
+Mcu.IP5=FREERTOS
+Mcu.IP6=MEMORYMAP
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=SPI2
+Mcu.IPNb=14
 Mcu.Name=STM32H723VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB5
-Mcu.Pin11=PB6
-Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin13=VP_SYS_VS_tim7
-Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin16=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin10=PB13
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13(JTMS/SWDIO)
+Mcu.Pin14=PA14(JTCK/SWCLK)
+Mcu.Pin15=PD0
+Mcu.Pin16=PD1
+Mcu.Pin17=PB5
+Mcu.Pin18=PB6
+Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin2=PH0-OSC_IN
+Mcu.Pin20=VP_SYS_VS_tim1
+Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin23=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PA13(JTMS/SWDIO)
-Mcu.Pin7=PA14(JTCK/SWCLK)
-Mcu.Pin8=PD0
-Mcu.Pin9=PD1
-Mcu.PinsNb=17
+Mcu.Pin4=PC0
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2_C
+Mcu.Pin7=PC3_C
+Mcu.Pin8=PE10
+Mcu.Pin9=PE12
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H723VGTx
 MxCube.Version=6.14.1
 MxDb.Version=DB.6.0.141
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -117,16 +168,17 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_IRQn=true\:15\:0\:true\:false\:true\:false\:false\:true\:true
 NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM7_IRQn
-NVIC.TimeBaseIP=TIM7
+NVIC.TimeBase=TIM1_UP_IRQn
+NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA10.Locked=true
 PA10.Mode=Asynchronous
@@ -138,22 +190,55 @@ PA14(JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB13.GPIOParameters=GPIO_Speed
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB13.Locked=true
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
 PB5.Locked=true
 PB5.Mode=FDCAN_Activate
 PB5.Signal=FDCAN2_RX
 PB6.Locked=true
 PB6.Mode=FDCAN_Activate
 PB6.Signal=FDCAN2_TX
+PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PC0.GPIO_Label=ACC_CS
+PC0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC0.Locked=true
+PC0.PinState=GPIO_PIN_SET
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Speed
+PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC1.Mode=Full_Duplex_Master
+PC1.Signal=SPI2_MOSI
 PC13.Locked=true
 PC13.Signal=GPIO_Output
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Output
+PC2_C.GPIOParameters=GPIO_Speed
+PC2_C.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC2_C.Mode=Full_Duplex_Master
+PC2_C.Signal=SPI2_MISO
+PC3_C.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PC3_C.GPIO_Label=GYRO_CS
+PC3_C.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC3_C.Locked=true
+PC3_C.PinState=GPIO_PIN_SET
+PC3_C.Signal=GPIO_Output
 PD0.Locked=true
 PD0.Mode=FDCAN_Activate
 PD0.Signal=FDCAN1_RX
 PD1.Locked=true
 PD1.Mode=FDCAN_Activate
 PD1.Signal=FDCAN1_TX
+PE10.GPIOParameters=GPIO_Label
+PE10.GPIO_Label=ACC_INT
+PE10.Locked=true
+PE10.Signal=GPXTI10
+PE12.GPIOParameters=GPIO_Label
+PE12.GPIO_Label=GYRO_INT
+PE12.Locked=true
+PE12.Signal=GPXTI12
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -190,7 +275,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_FDCAN2_Init-FDCAN2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_FDCAN2_Init-FDCAN2-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=48375000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -211,18 +296,20 @@ RCC.D3PPRE=RCC_APB4_DIV2
 RCC.DFSDMACLkFreq_Value=80000000
 RCC.DFSDMFreq_Value=120000000
 RCC.DIVM1=2
+RCC.DIVM3=2
 RCC.DIVN1=40
+RCC.DIVN3=40
 RCC.DIVP1=1
 RCC.DIVP1Freq_Value=480000000
 RCC.DIVP2Freq_Value=48375000
-RCC.DIVP3Freq_Value=48375000
+RCC.DIVP3Freq_Value=240000000
 RCC.DIVQ1=6
 RCC.DIVQ1Freq_Value=80000000
 RCC.DIVQ2Freq_Value=48375000
-RCC.DIVQ3Freq_Value=48375000
+RCC.DIVQ3Freq_Value=240000000
 RCC.DIVR1Freq_Value=240000000
 RCC.DIVR2Freq_Value=48375000
-RCC.DIVR3Freq_Value=48375000
+RCC.DIVR3Freq_Value=240000000
 RCC.FDCANFreq_Value=80000000
 RCC.FMCFreq_Value=240000000
 RCC.FamilyName=M
@@ -232,18 +319,21 @@ RCC.HPRE=RCC_HCLK_DIV2
 RCC.HSE_VALUE=24000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RCC_MCO1Source,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM3,DIVN1,DIVN3,DIVP1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RCC_MCO1Source,RNGEnable-ClockTree,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
 RCC.LPUART1Freq_Value=120000000
-RCC.LTDCFreq_Value=48375000
+RCC.LTDCFreq_Value=240000000
 RCC.MCO1PinFreq_Value=24000000
 RCC.MCO2PinFreq_Value=480000000
+RCC.PLL2FRACN=0
+RCC.PLL3FRACN=0
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPIFreq_Value=240000000
 RCC.RCC_MCO1Source=RCC_MCO1SOURCE_HSE
+RCC.RNGEnable-ClockTree=true
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
 RCC.SAI1Freq_Value=80000000
@@ -251,7 +341,8 @@ RCC.SAI4AFreq_Value=80000000
 RCC.SAI4BFreq_Value=80000000
 RCC.SDMMCFreq_Value=80000000
 RCC.SPDIFRXFreq_Value=80000000
-RCC.SPI123Freq_Value=80000000
+RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL3
+RCC.SPI123Freq_Value=240000000
 RCC.SPI45Freq_Value=120000000
 RCC.SPI6Freq_Value=120000000
 RCC.SWPMI1Freq_Value=120000000
@@ -266,10 +357,23 @@ RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.USBFreq_Value=48000000
 RCC.VCO1OutputFreq_Value=480000000
 RCC.VCO2OutputFreq_Value=96750000
-RCC.VCO3OutputFreq_Value=96750000
+RCC.VCO3OutputFreq_Value=480000000
 RCC.VCOInput1Freq_Value=12000000
 RCC.VCOInput2Freq_Value=750000
-RCC.VCOInput3Freq_Value=750000
+RCC.VCOInput3Freq_Value=12000000
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI2.CLKPhase=SPI_PHASE_2EDGE
+SPI2.CLKPolarity=SPI_POLARITY_HIGH
+SPI2.CalculateBaudRate=7.5 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase,DataSize,CLKPolarity
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=1000-1
 TIM3.Prescaler=240-1
@@ -283,8 +387,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
-VP_SYS_VS_tim7.Mode=TIM7
-VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
