usb通信调试完成

--- a/CtrBoard.ioc
+++ b/CtrBoard.ioc
@@ -95,9 +95,10 @@ FDCAN2.StdFiltersNbr=4
 FDCAN2.TxBuffersNbr=10
 FDCAN2.TxEventsNbr=10
 FDCAN2.TxFifoQueueElmtsNbr=10
-FREERTOS.IPParameters=Tasks01,MEMORY_ALLOCATION
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,MEMORY_ALLOCATION,FootprintOK
 FREERTOS.MEMORY_ALLOCATION=1
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;Calculator,48,512,T_Calculator,Default,NULL,Static,CalculatorBuffer,CalculatorControlBlock;Motor_Control,48,512,T_Motor_Control,Default,NULL,Static,Motor_ControlBuffer,Motor_ControlControlBlock;USER,48,128,T_USER,Default,NULL,Static,USERBuffer,USERControlBlock;Sensor,48,512,T_Sensor,Default,NULL,Static,SensorBuffer,SensorControlBlock
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;Calculator,48,512,T_Calculator,Default,NULL,Static,CalculatorBuffer,CalculatorControlBlock;Motor_Control,48,512,T_Motor_Control,Default,NULL,Static,Motor_ControlBuffer,Motor_ControlControlBlock;USER,48,128,T_USER,Default,NULL,Static,USERBuffer,USERControlBlock;Sensor,48,512,T_Sensor,Default,NULL,Static,SensorBuffer,SensorControlBlock;VOFA,53,256,T_VOFA,Default,NULL,Static,myTask06Buffer,myTask06ControlBlock
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -110,7 +111,8 @@ Mcu.IP1=DEBUG
 Mcu.IP10=SYS
 Mcu.IP11=TIM3
 Mcu.IP12=TIM4
-Mcu.IP13=USART1
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_HS
 Mcu.IP2=DMA
 Mcu.IP3=FDCAN1
 Mcu.IP4=FDCAN2
@@ -119,14 +121,14 @@ Mcu.IP6=MEMORYMAP
 Mcu.IP7=NVIC
 Mcu.IP8=RCC
 Mcu.IP9=SPI2
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32H723VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PB13
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
 Mcu.Pin13=PA13(JTMS/SWDIO)
 Mcu.Pin14=PA14(JTCK/SWCLK)
 Mcu.Pin15=PD0
@@ -138,7 +140,8 @@ Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin20=VP_SYS_VS_tim1
 Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin22=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin23=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin23=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.Pin24=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
@@ -146,7 +149,7 @@ Mcu.Pin6=PC2_C
 Mcu.Pin7=PC3_C
 Mcu.Pin8=PE10
 Mcu.Pin9=PE12
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H723VGTx
@@ -166,6 +169,7 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.OTG_HS_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -180,16 +184,14 @@ NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA10.Locked=true
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
+PA11.Mode=Device_Only_FS
+PA11.Signal=USB_OTG_HS_DM
+PA12.Mode=Device_Only_FS
+PA12.Signal=USB_OTG_HS_DP
 PA13(JTMS/SWDIO).Mode=Serial_Wire
 PA13(JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14(JTCK/SWCLK).Mode=Serial_Wire
 PA14(JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
-PA9.Locked=true
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
 PB13.GPIOParameters=GPIO_Speed
 PB13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB13.Locked=true
@@ -275,7 +277,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_FDCAN2_Init-FDCAN2-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_FDCAN2_Init-FDCAN2-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=48375000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -380,9 +382,12 @@ TIM3.Prescaler=240-1
 TIM4.IPParameters=Prescaler,Period
 TIM4.Period=1000-1
 TIM4.Prescaler=240-1
-USART1.BaudRate=921600
-USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
-USART1.VirtualMode-Asynchronous=VM_ASYNC
+USB_DEVICE.CLASS_NAME_HS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeHS,CLASS_NAME_HS
+USB_DEVICE.VirtualMode=Cdc
+USB_DEVICE.VirtualModeHS=Cdc_HS
+USB_OTG_HS.IPParameters=VirtualMode-Device_Only_FS
+USB_OTG_HS.VirtualMode-Device_Only_FS=Device_Only_FS
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
@@ -393,5 +398,7 @@ VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_HS
 board=custom
 rtos.0.ip=FREERTOS
