--- a/CtrBoard.ioc
+++ b/CtrBoard.ioc
@@ -96,9 +96,10 @@ FDCAN2.TxBuffersNbr=10
 FDCAN2.TxEventsNbr=10
 FDCAN2.TxFifoQueueElmtsNbr=10
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,MEMORY_ALLOCATION,FootprintOK
+FREERTOS.IPParameters=Tasks01,MEMORY_ALLOCATION,FootprintOK,Queues01
 FREERTOS.MEMORY_ALLOCATION=1
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;Calculator,48,512,T_Calculator,Default,NULL,Static,CalculatorBuffer,CalculatorControlBlock;Motor_Control,48,512,T_Motor_Control,Default,NULL,Static,Motor_ControlBuffer,Motor_ControlControlBlock;USER,48,128,T_USER,Default,NULL,Static,USERBuffer,USERControlBlock;Sensor,48,512,T_Sensor,Default,NULL,Static,SensorBuffer,SensorControlBlock;VOFA,53,256,T_VOFA,Default,NULL,Static,myTask06Buffer,myTask06ControlBlock
+FREERTOS.Queues01=Ctrl,16,uint16_t,0,Static,myQueue01Buffer,myQueue01ControlBlock
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;Calculator,48,512,T_Calculator,Default,NULL,Static,CalculatorBuffer,CalculatorControlBlock;Motor_Control,48,512,T_Motor_Control,Default,NULL,Static,Motor_ControlBuffer,Motor_ControlControlBlock;USER,48,128,T_USER,Default,NULL,Static,USERBuffer,USERControlBlock;Sensor,48,512,T_Sensor,Default,NULL,Static,SensorBuffer,SensorControlBlock;Commu,53,256,T_Commu,Default,NULL,Static,myTask06Buffer,myTask06ControlBlock
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
