--- a/CtrBoard.ioc
+++ b/CtrBoard.ioc
@@ -214,7 +214,10 @@ PC1.GPIOParameters=GPIO_Speed
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
+PC13.GPIOParameters=PinState,GPIO_Label
+PC13.GPIO_Label=LED
 PC13.Locked=true
+PC13.PinState=GPIO_PIN_RESET
 PC13.Signal=GPIO_Output
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Output
@@ -278,7 +281,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_FDCAN2_Init-FDCAN2-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_FDCAN2_Init-FDCAN2-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=48375000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
